--- a/public/carro.html
+++ b/public/carro.html
@@ -61,7 +61,7 @@
             <div class="row g-4">
                 <div class="col-md6 col-lg-3" id="custom-width">
                     <a class="text-uppercase text-decoration-none brand text-white" href="index.html">
-                        <img src="image/logo ulp.png" alt="" srcset="">
+                        <img src="image/logo ulp.png" alt="" srcset="" style="height: 20px;">
                         TIENDA ULP
                     </a>
                     <p class="texto-footer mt-3">
@@ -74,7 +74,7 @@
                 <div class="col-md-6 col-lg-3">
                     <ul class="">
                         <li class="my-3">
-                            <a href="" class="text-white text-decoration-none"><i class="fa-brands fa-github"></i> Github </a>
+                            <a href="https://github.com/nicolasrivar/tiendaULP" class="text-white text-decoration-none"><i class="fa-brands fa-github"></i> Github </a>
                         </li>
                     </ul>
                 </div>
