--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
 
     <div class="container" id="productos">
-        <h1 class="text-center">PRODUCTOS</h1>
+        <h1 class="text-center">OFERTAS DEL DIA</h1>
         <div class="row" style="margin-top: 30px;" id="grilla">
             <!--Decidí hacerlo desde js-->
             <!--<div class="col-md-3 py-md-0"  id ="1">
@@ -69,7 +69,7 @@
                 <div class="col-md-6 col-lg-3">
                     <ul class="">
                         <li class="my-3">
-                            <a href="" class="text-white text-decoration-none"><i class="fa-brands fa-github"></i> Github </a>
+                            <a href="https://github.com/nicolasrivar/tiendaULP" class="text-white text-decoration-none"><i class="fa-brands fa-github"></i> Github </a>
                         </li>
                     </ul>
                 </div>
